fix btn-drag position and z-index

--- a/themes/default/static/css/less/pages/admin.less
+++ b/themes/default/static/css/less/pages/admin.less
@@ -440,7 +440,7 @@
       cursor: move;
       display: none;
       position: absolute;
-      z-index: 9999;
+      z-index: 700;
       top: 50%;
       left: 50%;
       margin-top: -16px;
