--- a/themes/timtec/static/css/less/admin.less
+++ b/themes/timtec/static/css/less/admin.less
@@ -19,6 +19,10 @@
         margin-top: 40px;
       }
     }
+    .btn-drag {
+      top: 0;
+      margin-top: 90px;
+    }
   }
 
   // COURSES
